[Bugzilla-1411668]-Changing the overflow rule of secondaryPanel to prevent the unnecessary scrollbars

--- a/src/components/SecondaryPanes/SecondaryPanes.css
+++ b/src/components/SecondaryPanes/SecondaryPanes.css
@@ -1,5 +1,5 @@
 .secondary-panes {
-  overflow: scroll;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   flex: 1;
